# 3DViewer

./: CMakeLists.txt  Doxyfile  Makefile  README.md
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/3rdpart/: gif.h
src/controller/: controller.cpp  controller.h
src/model/: obj_model.cpp  obj_model.h  obj_parser.cpp  obj_parser.h
src/view/: frame_recorder.cpp  frame_recorder.h  gif_saver.cpp  gif_saver.h  glwidget.cpp  glwidget.h  projection.cpp  projection.h  render_settings.cpp  render_settings.h
tests/: CMakeLists.txt  test_model_edges_aabb.cpp  test_model_transform.cpp  test_obj_parser.cpp  test_utils.h
